[gd_scene load_steps=10 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Score.tscn" type="PackedScene" id=3]
[ext_resource path="res://bed-dishes/sink 3.tscn" type="PackedScene" id=5]
[ext_resource path="res://penguin.tscn" type="PackedScene" id=6]
[ext_resource path="res://bed-dishes/Bed.tscn" type="PackedScene" id=9]
[ext_resource path="res://house/house.tscn" type="PackedScene" id=10]
[ext_resource path="res://WhatToDoNext.tscn" type="PackedScene" id=11]
[ext_resource path="res://toilet.tscn" type="PackedScene" id=12]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 170, 99.291 )
collision_layer = 2

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
current = true
limit_left = -1190
limit_top = -974
limit_right = 1606
limit_bottom = 960
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="sink 3" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( -127.242, -777.023 )

[node name="Sprite" parent="YSort/sink 3" index="0"]
position = Vector2( 766.46, 261.307 )

[node name="CollisionPolygon2D" parent="YSort/sink 3" index="1"]
position = Vector2( 769.083, 263.415 )

[node name="Dishes" parent="YSort/sink 3" index="2"]
position = Vector2( 904.377, 240.239 )

[node name="CollisionShape2D" parent="YSort/sink 3/Dishes/Area2D" index="0"]
position = Vector2( -0.606645, 15.1689 )

[node name="Sprite" parent="YSort/sink 3/Dishes/hold e" index="0"]
position = Vector2( 1.12244, -20.2043 )

[node name="penguin" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 274.287, 105.902 )

[node name="Bed" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -333.844, 99.5342 )

[node name="toilet" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 1239.42, -542.388 )

[node name="house" parent="." instance=ExtResource( 10 )]
scale = Vector2( 1, 1 )
z_index = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="WhatToDoNext" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="timers" type="Node2D" parent="."]

[node name="NewPenguinTimer" type="Timer" parent="timers"]
wait_time = 3.0

[connection signal="did_dishes" from="YSort/sink 3/Dishes" to="." method="_on_Dishes_did_dishes"]
[connection signal="made_bed" from="YSort/Bed" to="." method="_on_Bed_made_bed"]
[connection signal="uncloged_toilet" from="YSort/toilet" to="." method="_on_toilet_uncloged_toilet"]
[connection signal="timeout" from="timers/NewPenguinTimer" to="." method="_on_NewPenguinTimer_timeout"]

[editable path="YSort/Player"]
[editable path="YSort/sink 3"]
[editable path="YSort/sink 3/Dishes"]
[editable path="YSort/sink 3/Dishes/hold e"]
[editable path="YSort/Bed"]
[editable path="YSort/Bed/hold e"]
